# rovidev-rag-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: __init__.py  chunking.py  config.py  main.py  models.py  rag.py  tokens.py  vectorstore.py
app/embeddings/: __init__.py  base.py  hashing.py  openai.py
app/llm/: __init__.py  base.py  extractive.py  openai.py
examples/: ingest_and_ask.py
tests/: test_api.py  test_chunking.py  test_embeddings.py  test_rag.py  test_vectorstore.py
