[project]
name = "rovidev-rag-agent"
version = "1.0.0"
description = "Retrieval-augmented generation service with grounded answers, inline source citations and token budgeting."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RoviDev", email = "contacto@rovidev.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=2.1.0",
]

[project.optional-dependencies]
openai = ["openai>=1.55.0", "tiktoken>=0.8.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[project.urls]
Homepage = "https://rovidev.com"
Repository = "https://github.com/rovidev95/rovidev-rag-agent"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
